updates for portfolio v2

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "server.js",
   "authors": [
-    "Katherine Nguyen <khnguyen86@live.com>"
+    "Katherine Nguyen"
   ],
   "license": "ISC",
   "homepage": "",
